package com.carlesaguilar.todolist.core.util

object TestTags {
    const val ORDER_SECTION = "ORDER_SECTION"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val NOTE_ITEM = "NOTE_ITEM"
    const val CHECKBOX_COMPLETED = "CHECKBOX_COMPLETED"
    const val LABEL_MARK_AS_COMPLETED = "LABEL_MARK_AS_COMPLETED"
}